# peanutbutter

./: .gitattributes  .gitignore  AGENTS.md  BIGPLAN.md  Cargo.toml  PLAN_CONTEXT.md  README.md  build.rs  cliff.toml  prek.toml
.github/workflows/: coverage.yml  release.yml  unstable.yml
assets/: starter_snippets.md
assets/imgs/: demo-edit.tape  demo-modes.tape  demo-new.tape  demo-prompts.tape  demo.tape
docs/: FUZZY.md  LSP.md  ROADMAP.md  SNIPPET_SYNTAX.md  keybinds-other-tuis-bigplan.md  settings-bigplan.md
docs/plans/: code-actions-bigplan.md  dependent-defaults-bigplan.md  dependent-variables-bigplan.md  docs-command-bigplan.md  lint-bigplan.md  stats-bigplan.md
examples/: config.toml  starter_snippets.md
examples/complex/: complex.md
examples/nested/: root.md
examples/simple/: snippets.md
plans/implement-peanutbutter-from-readme/: README.md  part-01-core-foundations-and-snippet-parsing.md  part-02-ranking-search-and-tree-navigation.md  (+2 more)
scripts/: ctrl-r-trial.bash  ctrl-r-trial.zsh  install.sh  pre-push-clippy.sh  smoke-part03-execute.sh  smoke-part04-bash.sh
src/: browse.rs  capture.rs  capture_heuristics.rs  cli.rs  command_template.rs  completions.rs  config.rs  discovery.rs  docs.rs  domain.rs  edit.rs  editor.rs  execute.rs  frecency.rs  fuzzy.rs  gc.rs  glob.rs  history_trial.rs  index.rs  keybinds.rs  lib.rs  lint.rs  lsp.rs  main.rs  new.rs  parser.rs  repo.rs  search.rs  settings.rs  shell.rs  stats.rs  syntax.rs  tui.rs  tui_chrome.rs
src/execute/: app.rs  browse.rs  mod.rs  (+6 more)
tests/: docs_cli.rs  examples.rs  help_without_config.rs
(+51 files in other folders)
