[package]
name = "peanutbutter"
version = "0.3.2"
edition = "2024"
default-run = "peanutbutter"

[[bin]]
name = "peanutbutter"
path = "src/main.rs"

[dependencies]
ansi-to-tui = "8.0"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
libc = "0.2"
nucleo-matcher = "0.3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
termimad = "0.34"
toml = "0.8"
