[package]
name = "peanutbutter"
version = "0.25.0"
edition = "2024"
default-run = "peanutbutter"

[[bin]]
name = "peanutbutter"
path = "src/main.rs"

[dependencies]
ansi-to-tui = "8.0"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
nucleo-matcher = "0.3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termimad = "0.34"
toml = "0.8"
toml_edit = "0.22"
owo-colors = "4"
shell-words = "1.1.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
